Resolved PR comment in PositionService